src/App.css
nav{
  position: absolute;
  width: 100%;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  z-index: 100;
  padding-inline: 5px;
  border-image: conic-gradient(var(--nav) 0 0) fill 0/0/0 100vmax;
  color: var(--nav-text);
  white-space: nowrap;  
  animation: nav-appears 1.5s ease-in-out 1s both;
}
@keyframes nav-appears {
  from{transform: translate(-50%, 100vh);}
  to{transform: translate(-50%, 0);}
}
@media (min-width: 760px){
  nav{width: clamp(300px, 80%, 1200px); padding-inline: 40px;}
}
@media (max-width: 500px){
  nav{font-size: 12px;}
}
nav ul{
  list-style: none;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
nav li{
  padding-block: 5px;
  text-align: center;
  flex: 1;
  transition: all .2s ease-in-out;
  transform-origin: bottom;
}
nav li:hover{
  scale: 1.05;
}
.active-link{
  background-color: var(--sky-bottom);
  color: var(--primary-color);
}
main{
  margin-bottom: calc(.8em + 40px);
  position: relative;
}
#home, #aboutme, #skills, #projects, #csschallenge, #contact{
  text-align: center;
  white-space: pre-line;
  font-size: 25px;
  min-height: calc(90vh - 80px);
  margin-bottom: 80px;
  /* padding-top: 40px; */
  display: flex;
  flex-direction: column;
  align-items: center;
  scroll-snap-align: start;
}
#home{
  padding-top: 0;
  justify-content: center;
  position: relative;
}
.home-scroll-down{
  color: var(--primary-color);
  position: absolute;
  bottom: -40px;
  width: 120px;
  transform-origin: center bottom;
  animation: scroll-down 3s ease-in-out infinite;
}
@keyframes scroll-down {
  from,
  20%,
  53%,
  to {
    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    transform: translateY(0);
  }

  40%,
  43% {
    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
    transform: translateY(-30px) scaleY(1.1);
  }

  70% {
    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
    transform: translateY(-15px) scaleY(1.05);
  }

  80% {
    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    transform: translateY(0) scaleY(0.95);
  }

  90% {
    transform: translateY(-4px) scaleY(1.02);
  } 
}
.wrapper.aboutMe{
  width: 100%;
  padding: 15px;
}
.wrapper.aboutMe .container{
  gap: 20px;
  align-items: center;
}
@media (max-width: 700px){
  .wrapper.aboutMe .container{flex-direction: column;}
}
#aboutme img{
  width: min(300px, 30%);
  border-radius: 16px;
  flex: 1;
}
#aboutme p{
  text-align: left;
  font-size: var(--font-size-p);
  flex: 4;
}
#skills, #projects, #contact{
  gap: 10px;
}
.empty-for-scroll{
  width: 100%;
  height: 400px;
}
.wrapper{
  position: relative;
  width: 80%;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  border-radius: 10px;
  background-color: var(--skills);
  box-shadow: 3px 3px 6px #0003;
  padding: 10px;
}
.wrapper h3{
  align-self: flex-start;
}
.wrapper img{
  width: 80%;
}
.wrapper p{
  text-align: left;
  width: 80%;
}
.container{
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 10px;
}
#projects .wrapper{
  gap: 25px;
  padding-block: 20px;
}
.container div{
  background-color: var(--links);
  padding: 8px;
  border-radius: 8px;
}
.container div p {
  text-align: center;
}
.container svg{
  width: 50px;
  height: 50px;
}
.category{
  position: absolute;
  right: 10px;
  width: 200px;
  padding: 5px 10px;
  border-radius: 5px;
  font-size: 20px;
  background-color: var(--tertiary-color);
  color: var(--nav-text);
}
.all-days{
  position: relative;
}
.days{
  justify-content: space-evenly;
}
.all-days button{
  padding: 8px;
  border-radius: 8px;
  border: none;
  background-color: var(--secondary-color);
  color: var(--nav-text);
  cursor: pointer;
}
.button-container{
  z-index: 100;
  margin-bottom: 20px;
  width: 100%;
  position: sticky;
  top: 0;
}
.container .project-url{
  background-color: var(--secondary-color);
  color: var(--nav-text);
  display: flex;
  gap: 5px;
}
.project-url svg{
  width: 30px;
  height: 30px;
}
.container .day{
  flex-direction: column;
  padding: 15px;
  margin-bottom: 25px;
}
@media (max-width: 475px){
  .day{scale:.75}
}
.container .penContainer{
  height: 400px;
  width: 400px;
  overflow: hidden;
  position: relative;
  padding: 0;
  margin-bottom: 15px;
}
.penContainer .pen{
  border: none;
  height: 560px;
  margin: -90px 0 -70px;
  overflow: hidden;
  padding: 0;
  position: relative;
  width: 400px;
  z-index: 5;
}
.penText{
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: 400px;
}
.penText a{
  display: flex;
  align-items: center;
}
.penText svg{
  width: 40px;
  height: 40px;
  fill: black;
  cursor: pointer;
}
.penActions .refresh{
  width: 30px;
  transition: all .3s ease-in-out;
}
.penActions .refresh:hover{
  rotate: -.5turn;
}
.penActions .penLink svg:hover, .penActions .refresh:hover{
  fill: var(--tertiary-color);
  color: var(--tertiary-color)
}
.penText p{
  margin-left: 8px;
  text-overflow: ellipsis;
}
.penText .penActions{
  display: flex;
  background: none;
}
#contact .container{
  justify-content: space-evenly;
}
#contact .container div{
  width: 250px;
}
a, button{
  transition: .3s ease-in-out;
}
a:hover, button:hover{
  scale: 1.05;
}
.resume{
  display: inline-flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
  gap: 5px;
}
.contact-me input,.contact-me button, .contact-me textarea{
  width: 95%;
  padding: 15px;
  margin-block: 15px;
  border-radius: 10px;
  border: none;
}
.errorMessage{
  width: 95%;
  padding-top: 15px;
  color: var(--tertiary-color);
}
.successMessage{
  color: var(--primary-color);
  font-weight: 500;
}
.contact-me input:focus-visible,.contact-me textarea:focus-visible{
  outline: 3px solid var(--sky-top);
}
.contact-me button{
  background-color: var(--secondary-color);
  color: var(--nav-text);
  cursor: pointer;
  transition: .3s ease-in-out;
}
.contact-me button:hover{
  scale: 1.05;
}
.findMe{
  display: flex;
  gap: 10px;
  width: 100%;
}
@media (max-width: 500px){
  .findMe{flex-direction: column;}
  .findMe div{width: 100%;}
}
.network{
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: center;
  gap: 10px;
}
.network svg{
  height: 30px;
}

